<resources>
    <string name="app_name">Posh</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">SplashActivity</string>


    <!-- Bottom navigation-->
    <string name="market">Store</string>
    <string name="favorites">Favorites</string>
    <string name="my_library">Purchases</string>
    <string name="settings">Settings</string>

    <!--Settings -->
    <string name="settings_unbind_label">Unbind pendant</string>
    <string name="settings_unbind_comment">Change pendant managed by the application</string>
    <string name="settings_qa_label">FAQ</string>
    <string name="settings_qa_comment">Answers for most frequent questions</string>
    <string name="debug_info_label">Debug info</string>
    <string name="debug_info_comment">Debug info</string>
    <string name="settings_address_label">Shops</string>
    <string name="settings_address_comment">Sale points\' addresses</string>
    <string name="settings_contacts_label">Contact us</string>
    <string name="settings_contacts_comment">Contact developers and ask your question</string>
    <string name="title_activity_photo_confirm">PhotoConfirmActivity</string>
    <string name="toast_delete_favorite">Long press the image to delete</string>
    <string name="toast_delete_favorite_failed">Failed to delete images: </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dfu_service_title">nRF Toolbox DFU Proxy</string>

    <string name="permission_title">Permission required</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no_required_permission">Haven\'t got the necessary permissions</string>
    <string name="no_device_scanned">Device not found</string>
    <string name="device_scanned">Device found</string>
    <string name="image_downloaded">Image downloaded</string>
    <string name="image_download_failed">Failed to download the image</string>
    <string name="image_deletion_failed">Failed to delete the image</string>
    <string name="auth_failed">Failed to authorize!</string>
    <string name="social_auth_failed">Request for social auth has failed</string>
    <string name="smth_went_wrong">Smth went wrong…</string>
    <string name="registration">Registration</string>
    <string name="email_not_found">No account exists for the email address. Create new account?</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="error">Error!</string>
    <string name="title_my_poshiks">My images</string>
    <string name="title_purchases">Purchases</string>
    <string name="hint_tag">TAG</string>
    <string name="token_date_in_past">Received token expiration date which is in the past</string>
    <string name="title_login">Login\n</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="button_back">Back</string>
    <string name="button_reset_password">Reset password</string>
    <string name="button_next">Next</string>
    <string name="title_or">or</string>
    <string name="button_fb_login">Login with Facebook</string>
    <string name="button_vk_login">Login with VK</string>
    <string name="button_email_login">with e-mail</string>
    <string name="title_category">Category</string>
    <string name="email_format_incorrect">Email format is incorrect.</string>
    <string name="code_format_incorrect"> Code should consist of 4 digits</string>
    <string name="phone_format_incorrect">Phone format is incorrect.</string>
    <string name="no_user_exist">The user is not found.</string>
    <string name="password_reset_success">Password has been successfully resetted. Please check your email.</string>

    <string name="dfu_unknown_name">unnamed device</string>
    <string name="dfu_status_connecting">Connecting&#8230;</string>
    <string name="dfu_status_connecting_msg">Connecting to %s&#8230;</string>
    <string name="dfu_status_starting">Starting DFU&#8230;</string>
    <string name="dfu_status_switching_to_dfu">Starting bootloader&#8230;</string>
    <string name="dfu_status_validating">Validating&#8230;</string>
    <string name="dfu_status_disconnecting">Disconnecting&#8230;</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_starting_msg">Initializing DFU process&#8230;</string>
    <string name="dfu_status_switching_to_dfu_msg">Waiting for bootloader&#8230;</string>
    <string name="dfu_status_validating_msg">Validating&#8230;</string>
    <string name="dfu_status_completed_msg">Application has been sent successfully.</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s&#8230;</string>
    <string name="dfu_status_uploading">Uploading&#8230;</string>
    <string name="dfu_status_uploading_part" formatted="false">Uploading part %d/%d&#8230;</string>
    <string name="dfu_status_uploading_msg">Transmitting firmware to %s&#8230;</string>
    <string name="dfu_action_abort">Abort</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="image_available">Using image from cache</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_code">Code</string>
    <string name="send_code">Send code</string>
    <string name="share_to">Share</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown error</string>
    <string name="network_error">Network error</string>
    <string name="no_connectivity_error">You are offline</string>
    <string name="balance_title">Balance: %d POSH</string>
    <string name="progress_message">Loading</string>
    <string name="artist">Artist</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="share_comment">Share your personal link to achieve tokens</string>
</resources>
