<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textAlignment="center"
        android:textSize="@dimen/title_login_font_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/icon_email_passwd_width"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/icon_email_passwd_margin_end"
            app:srcCompat="@drawable/icon_email" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/email_passwd_input_font_size"
            android:hint="@string/hint_email"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_between_email_and_passwd"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/icon_email_passwd_width"
            android:layout_marginEnd="@dimen/icon_email_passwd_margin_end"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/icon_password" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/email_passwd_input_font_size"
            android:hint="@string/hint_password"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/gap_between_passwd_and_buttons"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="0dp"
            android:layout_height="@dimen/email_login_button_height"
            android:layout_marginEnd="@dimen/gap_between_email_login_buttons"
            android:layout_weight="1"
            android:background="@drawable/round_cornered_rect"
            android:fontFamily="monospace"
            android:text="@string/button_back"
            android:textSize="@dimen/email_login_button_font_size"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/buttonResetPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/email_login_button_height"
            android:layout_marginEnd="@dimen/gap_between_email_login_buttons"
            android:layout_weight="3"
            android:background="@drawable/round_cornered_rect"
            android:fontFamily="monospace"
            android:text="@string/button_reset_password"
            android:textSize="@dimen/email_login_button_font_size"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/buttonForward"
            android:layout_width="0dp"
            android:layout_height="@dimen/email_login_button_height"
            android:layout_weight="1"
            android:background="@drawable/round_cornered_rect"
            android:fontFamily="monospace"
            android:text="@string/button_next"
            android:textSize="@dimen/email_login_button_font_size"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_margins_or"
        android:layout_marginRight="@dimen/horizontal_margins_or"
        android:layout_marginTop="@dimen/gap_between_email_and_passwd"
        android:layout_marginBottom="@dimen/gap_between_email_and_passwd"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/horizontal_line_width"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="#FFFFFF"/>

        <TextView
            android:id="@+id/orTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/title_or"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:layout_gravity="top"
            android:textSize="@dimen/or_font_size" />

        <View
            android:layout_width="@dimen/horizontal_line_width"
            android:layout_height="2dp"
            android:layout_gravity="center_vertical"
            android:background="#FFFFFF"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageViewFbRec"
            android:layout_width="@dimen/fb_vk_rectangled_width_height"
            android:layout_height="@dimen/fb_vk_rectangled_width_height"
            android:layout_marginEnd="@dimen/gap_between_email_login_buttons"
            android:layout_weight="1"
            app:srcCompat="@drawable/fb_rec_icon" />

        <ImageView
            android:id="@+id/imageViewVkRec"
            android:layout_width="@dimen/fb_vk_rectangled_width_height"
            android:layout_height="@dimen/fb_vk_rectangled_width_height"
            android:layout_marginStart="@dimen/gap_between_email_login_buttons"
            android:layout_weight="1"
            app:srcCompat="@drawable/vk_rec_icon" />
    </LinearLayout>

</LinearLayout>