<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:orientation="vertical">

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:blurOverlayColor="@android:color/transparent">

        <FrameLayout
            android:id="@+id/blurContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </eightbitlab.com.blurview.BlurView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:fontFamily="sans-serif-medium"
            android:textAlignment="center"
            android:textSize="@dimen/title_login_font_size" />

        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/phoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="8dp"
            android:inputType="phone"
            android:maxLines="1"
            android:textSize="@dimen/email_passwd_input_font_size"
            app:allowed_chars="1234567890"
            app:keep_hint="false"
            app:mask="+7(###) ###-##-##" />

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="match_parent"
            android:layout_height="@dimen/email_login_button_height"
            android:layout_marginEnd="@dimen/gap_between_email_login_buttons"
            android:layout_weight="1"
            android:background="@drawable/round_cornered_rect"
            android:fontFamily="monospace"
            android:text="@string/send_code"
            android:textAllCaps="false"
            android:textSize="@dimen/email_login_button_font_size" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_marginTop="@dimen/gap_between_email_and_passwd"
            android:drawableLeft="@drawable/ic_code"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/hint_code"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="@dimen/email_passwd_input_font_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_marginTop="@dimen/gap_between_passwd_and_buttons"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="0dp"
                android:layout_height="@dimen/email_login_button_height"
                android:layout_marginEnd="@dimen/gap_between_email_login_buttons"
                android:layout_weight="1"
                android:background="@drawable/round_cornered_rect"
                android:fontFamily="monospace"
                android:text="@string/button_back"
                android:textAllCaps="false"
                android:textSize="@dimen/email_login_button_font_size" />


            <Button
                android:id="@+id/buttonForward"
                android:layout_width="0dp"
                android:layout_height="@dimen/email_login_button_height"
                android:layout_weight="3"
                android:background="@drawable/round_cornered_rect"
                android:fontFamily="monospace"
                android:text="@string/button_next"
                android:textAllCaps="false"
                android:textSize="@dimen/email_login_button_font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/gap_between_email_and_passwd"
            android:layout_marginTop="@dimen/gap_between_email_and_passwd"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#FFFFFF" />

            <TextView
                android:id="@+id/orTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/title_or"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/or_font_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageViewFbRec"
                android:layout_width="@dimen/fb_vk_rectangled_width_height"
                android:layout_height="@dimen/fb_vk_rectangled_width_height"
                android:layout_marginEnd="@dimen/gap_between_email_login_buttons"
                android:layout_weight="1"
                android:src="@drawable/fb_rec_icon" />

            <ImageView
                android:id="@+id/imageViewVkRec"
                android:layout_width="@dimen/fb_vk_rectangled_width_height"
                android:layout_height="@dimen/fb_vk_rectangled_width_height"
                android:layout_marginStart="@dimen/gap_between_email_login_buttons"
                android:layout_weight="1"
                android:src="@drawable/insta" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>